progress(api): creating server for local files over wifi

--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^2.9.34",
+    "node-static": "^0.7.7",
     "restify": "^4.0.0"
   }
 }
